
Fix "make distcheck"
----------------------------------------------------------------------
Mon Apr  5 17:12:06 2004                        Michael Jennings (mej)

Fixed bug in loading print_pipe attribute pointed out by Tom A. Cox
<tomc@hot.rr.com>.
----------------------------------------------------------------------
Tue Apr 20 13:44:22 2004                        Michael Jennings (mej)

As requested by Ben Armstrong <synrg@sanctuary.nslug.ns.ca>, saving
theme settings will not preserve -e/--exec arguments unless a theme
was specifically named by the user.
----------------------------------------------------------------------
Tue Apr 20 15:40:39 2004                        Michael Jennings (mej)

Enable title-reporting and iconname-reporting escape sequences only if
specifically requested by user at compile time.  This exists solely to
protect the ignorant and careless from themselves.
----------------------------------------------------------------------
Mon May 10 18:43:15 2004                        Michael Jennings (mej)

Revert change from February 29th.  I never could reproduce it anyway.
----------------------------------------------------------------------
Fri Jun 25 17:48:24 2004                        Michael Jennings (mej)

Chris Schoeneman <crs23@bigfoot.com> pointed out that Eterm didn't get
keypresses if another app (like synergy) decided to listen for its
events.  This should correct that behavior.
----------------------------------------------------------------------
Mon Jun 28 12:34:36 2004                        Michael Jennings (mej)

Cleaning up some warnings.
----------------------------------------------------------------------
Wed Jul 14 16:16:48 2004                        Michael Jennings (mej)

Applied patch from Kim Woelders <kim@woelders.dk> to fix setting of
_NET_WM_ICON property.

Fixed a couple warnings.
----------------------------------------------------------------------